--- a/src/freeboogie/trunk/FreeBoogie/.classpath
+++ b/src/freeboogie/trunk/FreeBoogie/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="lib" path="/home/rg/workspace/FreeBoogie/lib/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="/home/rg/workspace/FreeBoogie/lib/stringtemplate-3.0.jar"/>
 	<classpathentry kind="lib" path="/home/rg/workspace/FreeBoogie/lib/antlr-3.0b7.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre(2)"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
