--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -54,7 +54,16 @@
   </target>
 
   <!-- Compilation and distribution targets -->
-  <target name="compile_parser" depends="generate_ast,generate_parser"
+  <target name="compile_ast" depends="generate_ast"
+          description="compiles the AST">
+    <javac srcdir="${ast}" destdir="${build}"
+           optimize="yes" debug="${debug}">
+      <classpath refid="classpath" />
+      <compilerarg value="-Xlint:all" />
+    </javac>
+  </target>
+
+  <target name="compile_parser" depends="generate_parser,compile_ast"
           description="compiles the parser with warnings turned off">
     <javac srcdir="${parser}" sourcepath="${src}" destdir="${build}" 
            optimize="yes" debug="no">
