generic substitution mechanism for ast

--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -34,6 +34,7 @@
       <arg value="normal_classes.tpl" />
       <arg value="evaluator.tpl" />
       <arg value="transformer.tpl" />
+      <arg value="substitutor.tpl" />
       <arg value="html.tpl" />
       <arg value="list.tpl" />
     </java>
