Updated and tested FreeBoogie plugin - it does no harm, although as an API it does nothing by itself.

--- a/src/freeboogie/trunk/plugin/build.properties
+++ b/src/freeboogie/trunk/plugin/build.properties
@@ -1,7 +1,5 @@
+source.. = .
+output.. = .
 bin.includes = META-INF/,\
-               freeboogie-0.0.jar,\
-               fb,\
-               antlr-3.0b7.jar
-src.includes = antlr-3.0b7.jar,\
-               fb,\
-               freeboogie-0.0.jar
+               freeboogie/,\
+               org/
