--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -14,7 +14,14 @@
   <property name="ast" location="src/freeboogie/ast" />
   <property name="astgen" location="src/freeboogie/ast/gen" />
   <property name="parser" location="src/freeboogie/parser" />
-  <path id="classpath"><fileset dir="lib" includes="*.jar" /></path>
+  <property name="junit_src" location="test/junit" />
+  <property name="reports.tests" location="test-reports"/> <!-- where the junit reports go-->
+  <path id="classpath">
+  <fileset dir="lib" includes="*.jar" />
+  <pathelement path="${build}"  />
+  </path>
+
+
 
   <!-- AST generation -->
   <target name="compile_astgen" description="compile freeboogie.ast">
@@ -28,7 +35,7 @@
   <target name="jar_astgen" 
           depends="compile_astgen" 
           description="creates a jar file with the ast generator"> 
-    <mkdir dir="distinct"/>
+    <mkdir dir="dist"/>
     <jar destfile="dist/astgen.jar" 
          basedir="${build}"
 	 includes="freeboogie/ast/gen/*.class,freeboogie/util/*.class,">
@@ -113,6 +120,33 @@
   
   
   <!-- Test targets -->
+
+  <target name="compile_junit" depends="compile" 
+    description="compile the junit tests ">
+    <javac srcdir="${junit_src}" destdir="${build}" 
+           optimize="yes" debug="${debug}">
+      <classpath refid="classpath" /> 
+      <compilerarg value="-Xlint:all" />
+    </javac>
+  </target>
+
+
+  <target name="junit_test" depends="compile_junit" 
+    description="run the junit tests ">
+     <mkdir dir="${reports.tests}"/>
+     <junit printsummary="yes" haltonfailure="yes">
+     <classpath refid="classpath" />
+     <formatter type="plain"/>
+
+      <batchtest fork="yes" todir="${reports.tests}">
+        <fileset dir="${junit_src}">
+          <include name="**/*.java"/>
+        </fileset>
+      </batchtest>
+    </junit>
+   </target>
+
+
   <target name="unit_test" depends="compile" description="run unit tests">
     <!-- TODO: Write unit tests. -->
   </target>
@@ -121,7 +155,7 @@
     <exec executable="test/functional/test" dir="test/functional" resolveexecutable="true" />
   </target>
 
-  <target name="test" depends="unit_test, functional_test" description="run all tests"></target>
+  <target name="test" depends="junit_test,unit_test, functional_test" description="run all tests"></target>
 
   <!-- Cleanup targets -->
   <target name="clean_ast" description="removes AST generated files">
