--- a/src/freeboogie/trunk/FreeBoogie/experiment/GraphGen/GraphGen/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/experiment/GraphGen/GraphGen/build.xml
@@ -15,6 +15,9 @@
   <property name="clops-target" location="src/freeboogie/experiments/graphgen/clops"/>
   <property name="clops-pkg" value="freeboogie.experiments.graphgen.clops"/>
   
+  <path id="compile.path">
+    <filelist dir="${lib}" files="clops-runtime.jar"/>
+  </path>
   
   <path id="clops.path">
     <filelist dir="${lib}" files="clops.jar"/>
