more style crap. checkstyle is almost happy.

--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -190,6 +190,7 @@
          <exclude name="**/parser/*"/>
          <exclude name="**/ast/*"/>
       </fileset>
+      <classpath refid="classpath"/>
     </checkstyle>
   </target>
 
