--- a/src/freeboogie/trunk/plugin/build.properties
+++ b/src/freeboogie/trunk/plugin/build.properties
@@ -1,5 +1,3 @@
-source.. = .
-output.. = .
 bin.includes = META-INF/,\
-               freeboogie/,\
-               org/
+               freeboogie-0.0.jar,\
+               antlr-3.0b7.jar
