--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -62,6 +62,19 @@
     </java>
   </target>
 
+  <target name="generate_clo_parser">
+    <mkdir dir="src/freeboogie/clo" />
+    <java fork="yes" classname="ie.ucd.clops.dsl.Main">
+      <assertions><enable/></assertions>
+      <classpath refid="classpath"/>
+      <arg value="-o"/>
+      <arg value="src/freeboogie/clo"/>
+      <arg value="-p"/>
+      <arg value="freeboogie.clo"/>
+      <arg value="src/freeboogie/freeboogie.clo"/>
+    </java>
+  </target>
+
   <!-- Compilation and documentation targets -->
   <target name="compile_ast" depends="generate_ast"
           description="compiles the AST">
@@ -176,6 +189,7 @@
     <delete dir="classes" />
     <delete dir="dist" />
     <delete dir="docs/api" />
+    <delete dir="src/freeboogie/clo" />
     <delete>
       <!-- ANTLR generated files -->
       <fileset dir="src/freeboogie/parser" includes="FbParser.java" />
