--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -20,6 +20,8 @@
   <property name="genericutils-jar" value="genericutils-0.1.jar"/>
   <property name="antlr-jar" value="antlr-runtime-3.1.3.jar" />
   <property name="astgen-jar" value="astgen-0.1.jar"/>
+  <property name="clops-jar" value="clops-runtime.jar"/>
+  <property name="jline-jar" value="jline-0.9.94.jar"/>
   <property name="ast-dir" location="src/freeboogie/ast" />
   <property name="parser-dir" location="src/freeboogie/parser" />
   <property name="gcollect-jar" value="google-collect-1.0-rc1.jar"/>
@@ -125,12 +127,14 @@
       <manifest>
         <attribute name="Main-Class" value="freeboogie.Main" />
         <attribute name="Class-Path" 
-          value="lib/${antlr-jar} lib/${genericutils-jar} lib/${gcollect-jar}" />
+          value="lib/${antlr-jar} lib/${genericutils-jar} lib/${gcollect-jar} lib/${clops-jar} lib/${jline-jar}"/>
       </manifest>
     </jar>
     <copy file="lib/${antlr-jar}" todir="dist/lib" />
+    <copy file="lib/${clops-jar}" todir="dist/lib" />
     <copy file="lib/${gcollect-jar}" todir="dist/lib" />
     <copy file="lib/${genericutils-jar}" todir="dist/lib" />
+    <copy file="lib/${jline-jar}" todir="dist/lib" />
   </target>
   
  
