(1) changes to the abstract grammar to support boogie 2 (2) dummy parser for boogie2

--- a/src/freeboogie/trunk/FreeBoogie/build.xml
+++ b/src/freeboogie/trunk/FreeBoogie/build.xml
@@ -88,7 +88,7 @@
     </javac>
   </target>
 
-  <target name="compile_parser" depends="generate_parser,compile_ast"
+  <target name="compile_parser" depends="generate_parser,compile_ast,generate_cli_parser"
           description="compiles the parser with warnings turned off">
     <javac srcdir="${parser-dir}" sourcepath="src" destdir="classes" 
            optimize="yes" debug="no">
