--- a/branches/changing-ast/FreeBoogie/build.xml
+++ b/branches/changing-ast/FreeBoogie/build.xml
@@ -38,13 +38,13 @@
     <mkdir dir="classes" />
     <java fork="yes" dir="${ast-dir}" jar="lib/${astgen-jar}">
       <arg value="fb.ag" />
-      <arg value="abstract_classes.tpl" />
-      <arg value="normal_classes.tpl" />
+      <arg value="classes.tpl" />
       <arg value="evaluator.tpl" />
       <arg value="transformer.tpl" />
       <arg value="substitutor.tpl" />
       <arg value="html.tpl" />
       <arg value="list.tpl" />
+      <arg value="utils.tpl" />
     </java>
   </target>
 
