[branch] parsing expressions
The ast for expressions in Boogie2 is more uniform:
The distinction between Atom and Expr disappeared.

--- a/branches/boogie2parser/build.xml
+++ b/branches/boogie2parser/build.xml
@@ -99,8 +99,7 @@
     </javac>
   </target>
   
-  <target name="doc" description="generate javadoc" 
-    depends="generate_ast,generate_parser">
+  <target name="doc" description="generate javadoc" depends="generate_code">
     <javadoc destdir="docs/api" sourcepath="src">
       <package name="freeboogie.*" />
       <classpath refid="classpath" />
