--- a/trunk/EclipseBoogieEditor/plugin.xml
+++ b/trunk/EclipseBoogieEditor/plugin.xml
@@ -5,7 +5,7 @@
    <extension
          point="org.eclipse.ui.editors">
       <editor
-            name="Boogie Editor"
+            name="Boogie Editor in Eclipse"
             extensions="bpl"
             icon="icons/sample.gif"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
