--- a/trunk/EclipseBoogieEditor/.project
+++ b/trunk/EclipseBoogieEditor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BoogieEditor</name>
+	<name>EclipseBoogieEditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
