Explicitly include ANT jars.
This avoids a warning (at least with some versions of ANT).
Those jars are needed by some of CLOPS's generated code.
(Which is not quite used at the moment, I believe.)

--- a/FreeBoogie/build.xml
+++ b/FreeBoogie/build.xml
@@ -143,6 +143,7 @@
         srcdir="src:generated-src"
         destdir="classes" 
         optimize="yes"
+        includeAntRuntime="true"
         debug="${debug}">
       <classpath refid="classpath" /> 
       <compilerarg value="-Xlint:all" />
